@@ -712,10 +712,21 @@ static void
 do_view_file (const gchar *path)
 {
 	gchar *arg;
-	
-	arg = gnome_vfs_unescape_string (path, NULL);
-	do_internal_file_view(arg);
-	g_free(arg);
+	gchar *command;
+
+	if (gnome_cmd_data_get_use_internal_viewer()) {
+		arg = gnome_vfs_unescape_string (path, NULL);
+		do_internal_file_view(arg);
+		g_free(arg);
+	}
+	else {
+		arg = g_shell_quote (path);
+		command = g_strdup_printf (gnome_cmd_data_get_viewer (), arg);
+		run_command (command, FALSE);
+		g_free (arg);
+		g_free (command);
+	}
+		
 }
 
 
